--- a/Pagina Curso/html/sonic_2.html
+++ b/Pagina Curso/html/sonic_2.html
@@ -18,7 +18,7 @@
         <div class = "contenedor_nav">
             <nav id="nav index" class = "nav index">
                 <div class ="logo">
-                    <a href="index.html"><img src="/img/joystick.png" alt="logo"> </a>
+                    <a href="/index.html"><img src="/img/joystick.png" alt="logo"> </a>
                 </div>
                 <ul class="nav_ul">
                     <li><a class = "opcion_boton-nav-activo">Inicio</a></li>
