--- a/Pagina Curso/html/tekken_3.html
+++ b/Pagina Curso/html/tekken_3.html
@@ -33,12 +33,12 @@
         <main>
             <div class = "container_main">
                 <div class="container_main_titulo">
-                    <h1>Donkey Kong Country 2 - Super Nintendo</h1>
+                    <h1>Tekken 3 - Playstation</h1>
                 </div>
             <div class="container_main_juegos">
 
                 <div class="container_juego">
-                    <iframe src="https://www.retrogames.cc/embed/17336-donkey-kong-country-2-diddy-s-kong-quest-usa-en-fr-rev-a.html" frameborder="no" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" scrolling="no"></iframe>
+                    <iframe src="https://www.retrogames.cc/embed/40238-tekken-3.html" frameborder="no" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" scrolling="no"></iframe>
                 </div>
 
             </div>
