--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <title>Games</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/css/style_index.css">
-        <link rel="stylesheet" href="/css/normalize.css">
+        <link rel="stylesheet" href="css/style_index.css">
+        <link rel="stylesheet" href="css/normalize.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
@@ -18,7 +18,7 @@
         <div class = "contenedor_nav">
             <nav id="nav index" class = "nav index">
                 <div class ="logo"><span>Inicio</span>
-                    <img href ="index.html" src="/img/joystick.png" alt="logo">
+                    <img href ="index.html" src="img/joystick.png" alt="logo">
                 </div>
                 <ul class="nav_ul">
                     <li><a class = "opcion_boton-nav-activo">Inicio</a></li>
@@ -49,43 +49,43 @@
             <div class="container_main_juegos">
 
                 <div class="juego">
-                    <a href="./html/sonic.html">
-                        <img src ="/img/Sonic.png">
+                    <a href="html/sonic.html">
+                        <img src ="img/Sonic.png">
                         <div class = "titulo_juego"><h2>Sonic - Sega</h2></div>
                     </a>
                 </div>
 
                 <div class="juego">
                     <a href="./html/sonic_2.html">
-                        <img src ="/img/Sonic_2.png">
+                        <img src ="img/Sonic_2.png">
                         <div class = "titulo_juego"><h2>Sonic 2 - Sega</h2></div>
                     </a>
                 </div>
                 
                 <div class="juego">
                     <a href="sonic_3.html">
-                        <img src ="/img/Sonic_3.png">
+                        <img src ="img/Sonic_3.png">
                         <div class = "titulo_juego"><h2>Sonic 3 - Sega</h2></div>
                     </a>
                 </div>
 
                 <div class="juego">
                     <a href="./html/donkeyc2.html">
-                        <img src ="/img/Donkey_kong_country_2.png">
+                        <img src ="img/Donkey_kong_country_2.png">
                         <div class = "titulo_juego"><h2>Donkey Kong Country 2 - Super Nintendo</h2></div>
                     </a>
                 </div>
 
                 <div class="juego">
                     <a href="./html/tekken_3.html">
-                        <img src ="/img/Tekken_3.png">
+                        <img src ="img/Tekken_3.png">
                         <div class = "titulo_juego"><h2>Tekken 3 - PS1</h2></div>
                     </a>
                 </div>
 
                 <div class="juego">
                     <a href="dragonballz_br.html">
-                        <img src ="/img/Dragon_Ball_Z.png">
+                        <img src ="img/Dragon_Ball_Z.png">
                         <div class = "titulo_juego"><h2>Dragon Ball Z Buyuu Retsuden - Sega</h2></div>
                     </a>
                 </div>
@@ -99,6 +99,6 @@
     <footer>
     
     </footer>
-        <script src="/js/script_index.js" async defer></script>
+        <script src="js/script_index.js" async defer></script>
     </body>
 </html>
