--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <title>Games</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/css/style_index.css">
-        <link rel="stylesheet" href="/css/normalize.css">
+        <link rel="stylesheet" href="css/style_index.css">
+        <link rel="stylesheet" href="css/normalize.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
