--- a/html/sonic_2.html
+++ b/html/sonic_2.html
@@ -7,8 +7,8 @@
         <title>Sonic 2</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/css/style_juego.css">
-        <link rel="stylesheet" href="/css/normalize.css">
+        <link rel="stylesheet" href="../css/style_juego.css">
+        <link rel="stylesheet" href="../css/normalize.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
@@ -18,7 +18,7 @@
         <div class = "contenedor_nav">
             <nav id="nav index" class = "nav index">
                 <div class ="logo">
-                    <a href="/index.html"><img src="/img/joystick.png" alt="logo"> </a>
+                    <a href="/index.html"><img src="../img/joystick.png" alt="logo"> </a>
                 </div>
                 <ul class="nav_ul">
                     <li><a class = "opcion_boton-nav-activo">Inicio</a></li>
