--- a/html/tekken_3.html
+++ b/html/tekken_3.html
@@ -18,13 +18,14 @@
         <div class = "contenedor_nav">
             <nav id="nav index" class = "nav index">
                 <div class ="logo">
-                    <a href="/index.html"><img src="../img/joystick.png" alt="logo"> </a>
+                    <a href="/index.html"><img href ="/index.html" src="/img/joystick.png" alt="logo"></a>
+                    <a href="/index.html"><span>Inicio</span></a>
                 </div>
                 <ul class="nav_ul">
                     <li><a class = "opcion_boton-nav-activo">Inicio</a></li>
                     <li><a class = "opcion_boton-nav">Juegos</a></li>
-                    <li><a class = "opcion_boton-nav">Opcion 3</a></li>
-                    <li><a class = "opcion_boton-nav">Opcion 4</a></li>
+                    <li><a href = "/html/nosotros.html"class ="opcion_boton-nav">Nosotros</a></li>
+                    <li><a href = "/html/login.html"class = "opcion_boton-nav">Iniciar sesión</a></li>
                 </ul>
             </nav>
         </div>
