--- a/html/tekken_3.html
+++ b/html/tekken_3.html
@@ -18,8 +18,8 @@
         <div class = "contenedor_nav">
             <nav id="nav index" class = "nav index">
                 <div class ="logo">
-                    <a href="/index.html"><img href ="/index.html" src="/img/joystick.png" alt="logo"></a>
-                    <a href="/index.html"><span>Inicio</span></a>
+                    <a href="../index.html"><img href ="/index.html" src="../img/joystick.png" alt="logo"></a>
+                    <a href="../index.html"><span>Inicio</span></a>
                 </div>
                 <ul class="nav_ul">
                     <li><a class = "opcion_boton-nav-activo">Inicio</a></li>
@@ -50,6 +50,6 @@
     
         </footer>
         
-        <script src="/js/script_index.js" async defer></script>
+        <script src="../js/script_index.js" async defer></script>
     </body>
 </html>
