--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <ul class="nav_ul">
                     <li><a href = "index.html" class = "opcion_boton-nav-activo">Inicio</a></li>
                     <li><a class = "opcion_boton-nav">Juegos</a></li>
-                    <li><a href= "/html/nosotros.html" class = "opcion_boton-nav">Nosotros</a></li>
-                    <li><a href= "/html/login.html" class = "opcion_boton-nav">Iniciar sesión</a></li>
+                    <li><a href= "html/nosotros.html" class = "opcion_boton-nav">Nosotros</a></li>
+                    <li><a href= "html/login.html" class = "opcion_boton-nav">Iniciar sesión</a></li>
                 </ul>
             </nav>
         </div>
