--- a/html/login.html
+++ b/html/login.html
@@ -7,8 +7,8 @@
         <title>Games</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/css/style_login.css">
-        <link rel="stylesheet" href="/css/normalize.css">
+        <link rel="stylesheet" href="../css/style_login.css">
+        <link rel="stylesheet" href="../css/normalize.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
@@ -18,13 +18,13 @@
         <div class = "contenedor_nav">
             <nav id="nav index" class = "nav index">
                 <div class ="logo"><span>Inicio</span>
-                    <img href ="/index.html" src="/img/joystick.png" alt="logo">
+                    <img href ="../index.html" src="../img/joystick.png" alt="logo">
                 </div>
                 <ul class="nav_ul">
-                    <li><a href="/index.html" class = "opcion_boton-nav">Inicio</a></li>
+                    <li><a href="../index.html" class = "opcion_boton-nav">Inicio</a></li>
                     <li><a class="opcion_boton-nav">Juegos</a></li>
-                    <li><a href="/html/nosotros.html" class = "opcion_boton-nav">Nosotros</a></li>
-                    <li><a href="/html/login.html" class = "opcion_boton-nav-activo">Iniciar sesión</a></li>
+                    <li><a href="../html/nosotros.html" class = "opcion_boton-nav">Nosotros</a></li>
+                    <li><a href="../html/login.html" class = "opcion_boton-nav-activo">Iniciar sesión</a></li>
                 </ul>
             </nav>
         </div>
@@ -35,7 +35,7 @@
 
                 <div class = "login">
                     <div class="background_login">
-                        <img class="img_background"src="/img/fondo_nosotros.png">
+                        <img class="img_background"src="../img/fondo_nosotros.png">
                     
                     <div class="opciones_login">   
                         <!--Login-->     
@@ -100,6 +100,6 @@
     <footer>
     
     </footer>
-        <script src="/js/script_index.js" async defer></script>
+        <script src="../js/script_index.js" async defer></script>
     </body>
 </html>
