--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -7,8 +7,8 @@
         <title>Games</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/css/style_nosotros.css">
-        <link rel="stylesheet" href="/css/normalize.css">
+        <link rel="stylesheet" href="../css/style_nosotros.css">
+        <link rel="stylesheet" href="../css/normalize.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
@@ -18,13 +18,13 @@
         <div class = "contenedor_nav">
             <nav id="nav index" class = "nav index">
                 <div class ="logo"><span>Inicio</span>
-                    <img href ="/index.html" src="/img/joystick.png" alt="logo">
+                    <img href ="../index.html" src="../img/joystick.png" alt="logo">
                 </div>
                 <ul class="nav_ul">
-                    <li><a href = "/index.html" class = "opcion_boton-nav">Inicio</a></li>
+                    <li><a href = "../index.html" class = "opcion_boton-nav">Inicio</a></li>
                     <li><a class = "opcion_boton-nav">Juegos</a></li>
-                    <li><a href="/html/nosotros.html" class = "opcion_boton-nav-activo">Nosotros</a></li>
-                    <li><a href="/html/login.html" class = "opcion_boton-nav">Iniciar sesión</a></li>
+                    <li><a href="../html/nosotros.html" class = "opcion_boton-nav-activo">Nosotros</a></li>
+                    <li><a href="../html/login.html" class = "opcion_boton-nav">Iniciar sesión</a></li>
                 </ul>
             </nav>
         </div>
@@ -35,9 +35,9 @@
 
                 <div class = "nosotros">
                     <div class="background_nosotros">
-                        <img class="img_background"src="/img/fondo_nosotros.png">
+                        <img class="img_background"src="../img/fondo_nosotros.png">
                         <div class="bloque_nosotros">
-                            <img class="img_personal" src ="/img/personal.png">
+                            <img class="img_personal" src ="../img/personal.png">
                             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque dignissimos molestiae deserunt recusandae, consequuntur officiis totam aliquam nemo ipsum sint fugit illo a dolorum dolor voluptatem possimus. Eaque, laudantium aspernatur.</p>
                         </div>
                     </div>
@@ -49,6 +49,6 @@
     <footer>
     
     </footer>
-        <script src="js/script_index.js" async defer></script>
+        <script src="../js/script_index.js" async defer></script>
     </body>
 </html>
