--- a/html/login.html
+++ b/html/login.html
@@ -17,8 +17,9 @@
     <header>
         <div class = "contenedor_nav">
             <nav id="nav index" class = "nav index">
-                <div class ="logo"><span>Inicio</span>
-                    <img href ="../index.html" src="../img/joystick.png" alt="logo">
+                <div class ="logo">
+                    <a href="../index.html"><img href ="../index.html" src="../img/joystick.png" alt="logo"></a>
+                    <a href="../index.html"><span>Inicio</span></a>
                 </div>
                 <ul class="nav_ul">
                     <li><a href="../index.html" class = "opcion_boton-nav">Inicio</a></li>
@@ -40,7 +41,7 @@
                     <div class="opciones_login">   
                         <!--Login-->     
                         <div id = "bloque_login" class="bloque_login" style="display:flex;">
-                            <div class="titulo_login"><span>Inicia Sesión</span></div>
+                            <div class="titulo_login"><span>Inicia sesión</span></div>
                             <div class="usuario_login">
                                 Nombre de usuario:
                                 <input type="text" placeholder="Usuario">
@@ -51,7 +52,7 @@
                             </div>
 
                             <div class="botones_login">
-                                <button class="iniciar_sesion_button" style="border:none;" >Iniciar Sesion</button>
+                                <button class="iniciar_sesion_button" style="border:none;" >Iniciar sesión</button>
                                 <button class="iniciar_sesion_button" style="border:none;" onclick=registro_on()>Registrarse</button>
                             </div>
                             <div class="olvidar_contraseña">
