--- a/html/snintendo.html
+++ b/html/snintendo.html
@@ -4,10 +4,10 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Games</title>
+        <title>Games - Super Nintendo</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../css/style_nosotros.css">
+        <link rel="stylesheet" href="../css/style_index.css">
         <link rel="stylesheet" href="../css/normalize.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,10 +22,10 @@
                     <a href="../index.html"><span>Inicio</span></a>
                 </div>
                 <ul class="nav_ul">
-                    <li><a href = "../index.html" class = "opcion_boton-nav">Inicio</a></li>
+                    <li><a href ="../index.html" class = "opcion_boton-nav-activo">Inicio</a></li>
                     <li><a class = "opcion_boton-nav">Juegos</a></li>
-                    <li><a href="../html/nosotros.html" class = "opcion_boton-nav-activo">Nosotros</a></li>
-                    <li><a href="../html/login.html" class = "opcion_boton-nav">Iniciar sesión</a></li>
+                    <li><a href= "../html/nosotros.html" class = "opcion_boton-nav">Nosotros</a></li>
+                    <li><a href= "../html/login.html" class = "opcion_boton-nav">Iniciar sesión</a></li>
                 </ul>
             </nav>
         </div>
@@ -34,17 +34,24 @@
         <main>
             <div class = "container_main">
 
-                <div class = "nosotros">
-                    <div class="background_nosotros">
-                        <img class="img_background" src="../img/fondo_nosotros.png">
-                        <div class="bloque_nosotros">
-                            <img class="img_personal" src ="../img/personal.png">
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque dignissimos molestiae deserunt recusandae, consequuntur officiis totam aliquam nemo ipsum sint fugit illo a dolorum dolor voluptatem possimus. Eaque, laudantium aspernatur.</p>
-                        </div>
-                    </div>
+
+                <div class="container_main_titulo">
+                    <h1>Super Nintendo</h1>
                 </div>
+                <div class="container_main_juegos">
+
+                    <div class="juego">
+                        <a href="../html/donkeyc2.html">
+                            <img src ="../img/Donkey_kong_country_2.png">
+                            <div class = "titulo_juego"><h2>Donkey Kong Country 2 - Super Nintendo</h2></div>
+                        </a>
+                    </div>
+
+                </div>
+
+
             </div>
-            </div>
+            
         </main>
 
     <footer>
