--- a/html/sonic_3.html
+++ b/html/sonic_3.html
@@ -4,10 +4,10 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Games</title>
+        <title>Sonic 3</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../css/style_nosotros.css">
+        <link rel="stylesheet" href="../css/style_juego.css">
         <link rel="stylesheet" href="../css/normalize.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,14 +18,14 @@
         <div class = "contenedor_nav">
             <nav id="nav index" class = "nav index">
                 <div class ="logo">
-                    <a href="../index.html"><img href ="../index.html" src="../img/joystick.png" alt="logo"></a>
+                    <a href="../index.html"><img href ="/index.html" src="../img/joystick.png" alt="logo"></a>
                     <a href="../index.html"><span>Inicio</span></a>
                 </div>
                 <ul class="nav_ul">
-                    <li><a href = "../index.html" class = "opcion_boton-nav">Inicio</a></li>
+                    <li><a class = "opcion_boton-nav-activo">Inicio</a></li>
                     <li><a class = "opcion_boton-nav">Juegos</a></li>
-                    <li><a href="../html/nosotros.html" class = "opcion_boton-nav-activo">Nosotros</a></li>
-                    <li><a href="../html/login.html" class = "opcion_boton-nav">Iniciar sesión</a></li>
+                    <li><a href = "../html/nosotros.html"class ="opcion_boton-nav">Nosotros</a></li>
+                    <li><a href = "../html/login.html"class = "opcion_boton-nav">Iniciar sesión</a></li>
                 </ul>
             </nav>
         </div>
@@ -33,23 +33,22 @@
     <body>
         <main>
             <div class = "container_main">
-
-                <div class = "nosotros">
-                    <div class="background_nosotros">
-                        <img class="img_background" src="../img/fondo_nosotros.png">
-                        <div class="bloque_nosotros">
-                            <img class="img_personal" src ="../img/personal.png">
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque dignissimos molestiae deserunt recusandae, consequuntur officiis totam aliquam nemo ipsum sint fugit illo a dolorum dolor voluptatem possimus. Eaque, laudantium aspernatur.</p>
-                        </div>
-                    </div>
+                <div class="container_main_titulo">
+                    <h1>Sonic 3 - Sega</h1>
                 </div>
+            <div class="container_main_juegos">
+
+                <div class="container_juego">
+                    <iframe src="https://www.retrogames.cc/embed/30002-sonic-the-hedgehog-3-europe.html" frameborder="no" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" scrolling="no"></iframe>
+                </div>
+
             </div>
             </div>
         </main>
 
-    <footer>
+        <footer>
     
-    </footer>
+        </footer>
         <script src="../js/script_index.js" async defer></script>
     </body>
 </html>
