--- a/index.html
+++ b/index.html
@@ -33,15 +33,22 @@
     <body>
         <main>
             <div class = "container_main">
+                <div class="container_main_titulo">
+                    <h1>Plataformas</h1>
+                </div>
                 <div class="slider">
                     <div class="slider--inner">
-                        <img class ="img-slider" src="img/playstation.png">
-                        <img class ="img-slider" src="img/Sega.jpg">
-                        <img class ="img-slider" src="img/super nintendo.png">
+                        <div class="img-slider">
+                            <a href="html/playstation.html"><img src="img/playstation.png"></a>
+                        </div>
+                        <div class="img-slider">
+                            <a href="./html/sega.html"><img class ="img-slider" src="img/Sega.jpg"></a>
+                        </div>
+                        <div class="img-slider">
+                            <a href="./html/snintendo.html"><img class ="img-slider" src="img/super nintendo.png"></a>
+                        </div>
                     </div>
                 </div>
-
-
 
                 <div class="container_main_titulo">
                     <h1>Algunos juegos populares</h1>
@@ -49,7 +56,7 @@
                 <div class="container_main_juegos">
 
                     <div class="juego">
-                        <a href="html/sonic.html">
+                        <a href="/html/sonic.html">
                             <img src ="img/Sonic.png">
                             <div class = "titulo_juego"><h2>Sonic - Sega</h2></div>
                         </a>
@@ -63,7 +70,7 @@
                     </div>
                     
                     <div class="juego">
-                        <a href="sonic_3.html">
+                        <a href="./html/sonic_3.html">
                             <img src ="img/Sonic_3.png">
                             <div class = "titulo_juego"><h2>Sonic 3 - Sega</h2></div>
                         </a>
@@ -84,7 +91,7 @@
                     </div>
 
                     <div class="juego">
-                        <a href="dragonballz_br.html">
+                        <a href="./html/dragonballz_br.html">
                             <img src ="img/Dragon_Ball_Z.png">
                             <div class = "titulo_juego"><h2>Dragon Ball Z Buyuu Retsuden - Sega</h2></div>
                         </a>
