--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="container_main_juegos">
 
                     <div class="juego">
-                        <a href="/html/sonic.html">
+                        <a href="./html/sonic.html">
                             <img src ="img/Sonic.png">
                             <div class = "titulo_juego"><h2>Sonic - Sega</h2></div>
                         </a>
